# bank-complaint-audit-issues

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: base.yaml
configs/datasets/: jl_2024.yaml  sample_local.yaml
configs/profiles/: cpu.yaml  gpu.yaml
docs/: architecture.md  data_contract.md  plan_2026-03-21.md  review_workflow.md  runtime_profiles.md
scripts/: run_full_pipeline.py  smoke_test.py
src/audit_issue_engine/: __init__.py  cli.py
src/audit_issue_engine/assignment/: __init__.py  label_builder.py  matcher.py  scorer.py
src/audit_issue_engine/config/: manifest.py  settings.py
src/audit_issue_engine/discovery/: clusterer.py  outlier_handler.py  reducer.py  title_generator.py
src/audit_issue_engine/extraction/: dictionaries.py  fact_extractor.py  pattern_rules.py
src/audit_issue_engine/ingest/: loader.py  validator.py  writer.py
src/audit_issue_engine/issue_split/: __init__.py  issue_segmenter.py  merge_rules.py  sentence_splitter.py
src/audit_issue_engine/reporting/: excel_reports.py  markdown_summary.py  parquet_exports.py
src/audit_issue_engine/representation/: __init__.py  dense_encoder.py  feature_store.py  sparse_features.py
src/audit_issue_engine/taxonomy/: __init__.py  canonical_store.py  promoter.py  working_types.py
src/audit_issue_engine/term_mining/: __init__.py  ngram_miner.py  normalizer.py  pmi_miner.py
tests/: test_cli_smoke.py  test_config.py  test_fact_extractor.py  test_issue_split.py  test_term_mining.py  test_title_generator.py
tests/fixtures/: sample_tickets.csv
(+16 files in other folders)
